# Rust-Bibliotecas

./: README.md
Regex/: Cargo.toml  README.md  ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs
Serde e Serde JSON/: Cargo.toml  README.md  ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  tempCodeRunnerFile.rs
Serde, Serde JSON e CSV/: Cargo.toml  README.md  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs  ex08.rs  ex09.rs  ex10.rs
Text Input/: Cargo.toml  README.md  ex01.rs
