[dependencies]
csv = "1.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[package]
name = "Serde"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ex01"
path = "ex01.rs"

[[bin]]
name = "ex02"
path = "ex02.rs"

[[bin]]
name = "ex03"
path = "ex03.rs"

[[bin]]
name = "ex04"
path = "ex04.rs"

[[bin]]
name = "ex05"
path = "ex05.rs"

[[bin]]
name = "ex06"
path = "ex06.rs"

[[bin]]
name = "ex07"
path = "ex07.rs"

